2004-03-11  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/s390/s390-64/vfork.S (__vfork): Use jgnl
	instead of jnl instruction to jump to SYSCALL_ERROR_LABEL.
	* sysdeps/unix/sysv/linux/s390/s390-64/pt-vfork.S (__vfork): Likewise.

2004-03-11  Jakub Jelinek  <jakub@redhat.com>

	* forward.c (__pthread_cond_broadcast_2_0,
	__pthread_cond_destroy_2_0, __pthread_cond_init_2_0,
	__pthread_cond_signal_2_0, __pthread_cond_wait_2_0,
	__pthread_cond_timedwait_2_0): Use return 0 as defaction instead of 0.

2004-03-11  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/tcb-offsets.sym: Add PID.
	* sysdeps/unix/sysv/linux/sh/pt-vfork.S: Properly handle PID cache.
	* sysdeps/unix/sysv/linux/sh/vfork.S: New file.

2004-03-10  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/vfork.S: No need to
	include <sysdep-cancel.h>, vfork is no cancellation point.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/vfork.S: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/pt-vfork.S: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/pt-vfork.S: Likewise.

2004-03-10  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/s390/s390-32/vfork.S (__vfork): Add
	libc_hidden_def.
	* sysdeps/unix/sysv/linux/s390/s390-64/vfork.S (__vfork): Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/vfork.S (__vfork):
	Likewise.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/vfork.S (__vfork):
	Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc32/vfork.S (__vfork): Likewise.
	* sysdeps/unix/sysv/linux/sparc/sparc64/vfork.S (__vfork): Likewise.
	* sysdeps/unix/sysv/linux/ia64/pt-vfork.S: Include tcb-offsets.h.
	* sysdeps/unix/sysv/linux/ia64/vfork.S (__vfork): Use DO_CALL instead
	of DO_CALL_VIA_BREAK.  Work around a gas problem.

	* sysdeps/unix/sysv/linux/powerpc/pt-vfork.S: Remove.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/vfork.S: New file.
	* sysdeps/unix/sysv/linux/powerpc/powerpc32/pt-vfork.S: New file.