@@ -1,3 +1,9 @@
+2004-03-11  Richard Henderson  <rth@redhat.com>
+
+	* sysdeps/alpha/tcb-offsets.sym (PID_OFFSET): New.
+	* sysdeps/unix/sysv/linux/alpha/pt-vfork.S: Save/restore PID.
+	* sysdeps/unix/sysv/linux/alpha/vfork.S: New file.
+
 2004-03-11  Jakub Jelinek  <jakub@redhat.com>
 
 	* sysdeps/unix/sysv/linux/s390/s390-64/vfork.S (__vfork): Use jgnl
